--- a/releng/airootfs/etc/skel/.config/hypr/hyprland.conf
+++ b/releng/airootfs/etc/skel/.config/hypr/hyprland.conf
@@ -17,7 +17,7 @@ OR EDIT THIS ONE ACCORDING TO THE WIKI INSTRUCTIONS.
 monitor=eDP-1,1920x1080@60,0x0,1
 # workspace=DP-1,1
 # monitor=DP-1,transform,1
-monitor=HDMI-A-1,1920x1080@120,1920x0, 1
+monitor=HDMI-A-1,1920x1080@190,1920x0, 1
 monitor=,preferred,auto,1
 # workspace=HDMI-A-1,11
 # See https://wiki.hyprland.org/Configuring/Keywords/ for more
@@ -75,20 +75,26 @@ bind = SUPER, l, exec, ~/.bin/tog_vis
 decoration {
     # See https://wiki.hyprland.org/Configuring/Variables/ for more
 
+
     rounding = 18
-    blur = 1
-    blur_size = 6.8
-    blur_passes = 2
-    blur_new_optimizations = true
 
 drop_shadow = true
   # shadow_ignore_window = true
   # shadow_offset = 2 2
   shadow_range = 15
   
+   blur {
+
+   # blur = 1
+   passes = 2
+   new_optimizations = false
+   size = 6.8
+   }
 }
 #layerrule=blur,rofi
 misc {
+  animate_manual_resizes = true
+  animate_mouse_windowdragging = true
   disable_hyprland_logo = true
   disable_splash_rendering = true
   mouse_move_enables_dpms = true
@@ -279,17 +285,19 @@ bind = SUPER, mouse_up, workspace, e-1
 bindm = $mainMod, mouse:272, movewindow
 bindm = $mainMod, mouse:273, resizewindow
 exec-once=waybar
+# exec-once=ags
 # exec-once=~/.bin/mpd
 # exec-once=~/MPD/output/release/mpd
 exec-once = systemctl --user import-environment WAYLAND_DISPLAY XDG_CURRENT_DESKTOP
 exec-once=dbus-update-activation-environment --systemd WAYLAND_DISPLAY XDG_CURRENT_DESKTOP=$XDG_CURRENT_DESKTOP
-exec-once=udiskie
+# exec-once=udiskie
  # exec-once=swaybg -m fill -i "$(< "${HOME}/.cache/wal/wal")"
 #exec-once=hyprpaper
- exec-once=~/.bin/swww-launch
+exec-once=~/.bin/swww-launch
 # exec-once=swww img "$(< "${HOME}/.cache/wal/wal")"
-exec-once=dunst
-exec-once=~/.bin/mdd
+# exec-once=dunst
+# exec-once=~/.bin/mdd
+# exec-once=firefox
 exec-once=wlsunset -l 47.845490 -L 22.672390 -T 19800
 exec-once=hyprctl setcursor Bibata-Modern-Classic 17
 # exec-once=mpd-notification&
